# DeviceOrientationApiTest

./: .gitignore  README.md  camera-controller.html  index.html
css/: base.css
js/: log.js  motion.js  video.js
server/: README.md  pyproject.toml  server.py
