[tool.poetry]
name = "tornado_websocket"
version = "0.1.0"
description = ""
authors = ["Takahiro55555 <tkhr.pub@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
tornado = "^6.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
